@@ -11,29 +11,17 @@ module Sequel
   # *  Sequel.connect('do:postgres://user:password@host/database')
   # *  Sequel.connect('do:mysql://user:password@host/database')
   module DataObjects
-    # Contains procs keyed on sub adapter type that extend the
+    # Contains procs keyed on subadapter type that extend the
     # given database object so it supports the correct database type.
-    DATABASE_SETUP = {:postgres=>proc do |db|
-        require 'do_postgres'
-        Sequel.require 'adapters/do/postgres'
-        db.extend(Sequel::DataObjects::Postgres::DatabaseMethods)
-        db.extend_datasets Sequel::Postgres::DatasetMethods
-      end,
-      :mysql=>proc do |db|
-        require 'do_mysql'
-        Sequel.require 'adapters/do/mysql'
-        db.extend(Sequel::DataObjects::MySQL::DatabaseMethods)
-        db.dataset_class = Sequel::DataObjects::MySQL::Dataset
-      end,
-      :sqlite3=>proc do |db|
-        require 'do_sqlite3'
-        Sequel.require 'adapters/do/sqlite'
-        db.extend(Sequel::DataObjects::SQLite::DatabaseMethods)
-        db.extend_datasets Sequel::SQLite::DatasetMethods
-        db.set_integer_booleans
-      end
-    }
+    DATABASE_SETUP = {}
       
+    # Wrapper for require that raises AdapterNotFound if driver could not be loaded
+    def self.load_driver(path)
+      require path
+    rescue LoadError => e
+      raise AdapterNotFound, e.message
+    end
+        
     # DataObjects uses it's own internal connection pooling in addition to the
     # pooling that Sequel uses.  You should make sure that you don't set
     # the connection pool size to more than 8 for a
@@ -108,12 +96,12 @@ module Sequel
       private
       
       # Call the DATABASE_SETUP proc directly after initialization,
-      # so the object always uses sub adapter specific code.  Also,
+      # so the object always uses subadapter specific code.  Also,
       # raise an error immediately if the connection doesn't have a
       # uri, since DataObjects requires one.
       def adapter_initialize
         raise(Error, "No connection string specified") unless uri
-        if prok = DATABASE_SETUP[subadapter.to_sym]
+        if prok = Sequel::Database.load_adapter(subadapter.to_sym, :map=>DATABASE_SETUP, :subdir=>'do')
           prok.call(self)
         end
       end
