@@ -1,8 +1,17 @@
+Sequel::JDBC.load_driver('org.firebirdsql.jdbc.FBDriver')
 Sequel.require 'adapters/shared/firebird'
 Sequel.require 'adapters/jdbc/transactions'
 
 module Sequel
   module JDBC
+    Sequel.synchronize do
+      DATABASE_SETUP[:firebirdsql] = proc do |db|
+        db.extend(Sequel::JDBC::Firebird::DatabaseMethods)
+        db.extend_datasets Sequel::Firebird::DatasetMethods
+        org.firebirdsql.jdbc.FBDriver
+      end
+    end
+
     # Database and Dataset instance methods for Firebird specific
     # support via JDBC.
     module Firebird
