@@ -1,8 +1,17 @@
+Sequel::JDBC.load_driver('Java::oracle.jdbc.driver.OracleDriver')
 Sequel.require 'adapters/shared/oracle'
 Sequel.require 'adapters/jdbc/transactions'
 
 module Sequel
   module JDBC
+    Sequel.synchronize do
+      DATABASE_SETUP[:oracle] = proc do |db|
+        db.extend(Sequel::JDBC::Oracle::DatabaseMethods)
+        db.dataset_class = Sequel::JDBC::Oracle::Dataset
+        Java::oracle.jdbc.driver.OracleDriver
+      end
+    end
+
     class TypeConvertor
       JAVA_BIG_DECIMAL_CONSTRUCTOR = java.math.BigDecimal.java_class.constructor(Java::long).method(:new_instance)
 
